# beelearn_api

./: .gitignore  Pipfile  README.md  badges.json  build.sh  db.sqlite3  docker-compose.yaml  dockerfile  flush.py  manage.py  ngrok.sh  pyproject.toml  render.yaml  requirements.txt
.config/daphne/: service.conf  socket.conf
account/: admin.py  authenticate.py  authentication.py  hooks.py  models.py  routers.py  serializers.py  signals.py  tests.py  viewsets.py
account/migrations/: 0001_initial.py  0002_alter_notification_icon_alter_notification_image_and_more.py  0002_alter_notification_topic.py  0002_profile_daily_streak_minutes.py  0002_remove_notification_intent_to.py  0002_rename_content_notification_body_and_more.py  0002_user_avatar.py  0003_alter_notification_topic.py  0003_alter_notification_user.py  0003_alter_profile_daily_streak_minutes.py  0003_user_categories.py  0004_alter_notification_image_alter_notification_topic.py  0004_alter_settings_options_notification_metadata.py  0004_user_gender.py  (+5 more)
assessment/: admin.py  models.py  routers.py  serializers.py  signals.py  viewsets.py
beelearn/: _tokenizer.py  api_urls.py  art.py  asgi.py  celery.py  external_api.py  fields.py  middleware.py  mixins.py  models.py  notification.py  parsers.py  permissions.py  scripts.py  settings.py  tests.py  urls.py  utils.py  wsgi.py
catalogue/: admin.py  hooks.py  models.py  routers.py  seed.py  serializers.py  signals.py  viewsets.py
enhancement/: admin.py  models.py  routers.py  serializers.py  viewsets.py
leaderboard/: admin.py  apps.py  celery.py  models.py  routers.py  seed.py  seeds.py  serializers.py  signal.py  utils.py  viewsets.py
messaging/: admin.py  hooks.py  models.py  routers.py  seed.py  serializers.py  signals.py  viewsets.py
metadata/: admin.py  models.py  routers.py  seed.py  seeds.py  serializers.py  viewsets.py
mixer/: apps.py  legacy_models.py  ml_models.py  models.py  signals.py
nginx/: Dockerfile  default.conf
payment/: admin.py  credentials.json  flutterwave.py  googleplay.py  googleplay_type.py  hooks.py  inapp_purchase.py  models.py  paystack.py  paystack_type.py  routers.py  seed.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
realtime/: models.py
reward/: admin.py  apps.py  constants.py  hooks.py  models.py  routers.py  seed.py  seeds.py  serializers.py  signals.py  tasks.py  tests.py  viewsets.py
scripts/: clean.py  clear_leaderboard.py  clear_rewards.py  clear_users.py  create_rewards.py  create_streaks.py  create_test_questions.py  flush.py  reset_courses.py  seed.py
(+61 files in other folders)
