[tool.poetry]
name = "beelearn"
version = "0.1.0"
description = ""
authors = ["Oguntunde Caleb Fiyinfoluwa <oasis.mystre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
djangorestframework = "^3.14.0"
Pillow = "^10.0.0"
dj-url-filter = "^0.4.4"
six = "^1.16.0"
django-cors-headers = "^4.2.0"
requests = "^2.31.0"
drf-writable-nested = "^0.7.0"
django-restql = "^0.15.3"
django-grappelli = "^3.0.6"
pytz = "^2023.3"
python-socketio = "^5.8.0"
djira = {git="https://github.com/oasisMystre/djira", branch="main"}
sentry-sdk = "^1.28.1"

[tool.poetry.dev-dependencies]
django-tidb = { git="https://github.com/pingcap/django-tidb", branch="main"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
